--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="switchOffLight">Stinge lumina</string>
     <string name="stopTimer">Opreste </string>
     <string name="settings">Setari</string>
+    <string name="todo">TODO</string>
 </resources>
